some query to style textareas

--- a/index.html
+++ b/index.html
@@ -31,30 +31,76 @@
         </header>
 
         <div class="container">
-            <div class="row">
-                <div class="col-md-1 hour">.hour</div>
-                <div class="col-md-10 past">
+            <div id="hour-9am" class="row">
+                <div class="col-md-1 hour">9am</div>
+                <div class="col-md-10 textarea-container">
                     <textarea></textarea>
                 </div>
                 <div class="col-md-1 save-button">.save button</div>
             </div>
 
-            <div class="row">
-                <div class="col-md-1 hour">.hour</div>
-                <div class="col-md-10 present">
+            <div id="hour-10am" class="row">
+                <div class="col-md-1 hour">10am</div>
+                <div class="col-md-10 textarea-container">
                     <textarea></textarea>
                 </div>
                 <div class="col-md-1 save-button">.save button</div>
             </div>
 
-            <div class="row">
-                <div class="col-md-1 hour">.hour</div>
-                <div class="col-md-10 future">
+            <div id="hour-11am" class="row">
+                <div class="col-md-1 hour">11am</div>
+                <div class="col-md-10 textarea-container">
                     <textarea></textarea>
                 </div>
-                <div class="col-md-1 save-button">
-                    <i class="fas fa-save"></i>
+                <div class="col-md-1 save-button">.save button</div>
+            </div>
+
+            <div id="hour-12pm" class="row">
+                <div class="col-md-1 hour">12pm</div>
+                <div class="col-md-10 textarea-container">
+                    <textarea></textarea>
                 </div>
+                <div class="col-md-1 save-button">.save button</div>
+            </div>
+
+            <div id="hour-1pm" class="row">
+                <div class="col-md-1 hour">1pm</div>
+                <div class="col-md-10 textarea-container">
+                    <textarea></textarea>
+                </div>
+                <div class="col-md-1 save-button">.save button</div>
+            </div>
+
+            <div id="hour-2pm" class="row">
+                <div class="col-md-1 hour">2pm</div>
+                <div class="col-md-10 textarea-container">
+                    <textarea></textarea>
+                </div>
+                <div class="col-md-1 save-button">.save button</div>
+            </div>
+
+            <div id="hour-3pm" class="row">
+                <div class="col-md-1 hour">3pm</div>
+                <div class="col-md-10 textarea-container">
+                    <textarea></textarea>
+                </div>
+                <div class="col-md-1 save-button">.save button</div>
+            </div>
+
+            <div id="hour-4pm" class="row">
+                <div class="col-md-1 hour">4pm</div>
+                <div class="col-md-10 textarea-container">
+                    <textarea></textarea>
+                </div>
+                <div class="col-md-1 save-button">.save button</div>
+            </div>
+
+            <div id="hour-5pm" class="row">
+                <div class="col-md-1 hour">5pm</div>
+                <div class="col-md-10 textarea-container">
+                    <textarea></textarea>
+                </div>
+                <div class="col-md-1 save-button">.save button</div>
             </div>
         </div>
         
