how to add classes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="col-md-10 textarea-container">
                     <textarea></textarea>
                 </div>
-                <div class="col-md-1 save-button">.save button</div>
+                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
 
             <div id="hour-10am" class="row">
@@ -44,7 +44,7 @@
                 <div class="col-md-10 textarea-container">
                     <textarea></textarea>
                 </div>
-                <div class="col-md-1 save-button">.save button</div>
+                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
 
             <div id="hour-11am" class="row">
@@ -52,7 +52,7 @@
                 <div class="col-md-10 textarea-container">
                     <textarea></textarea>
                 </div>
-                <div class="col-md-1 save-button">.save button</div>
+                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
 
             <div id="hour-12pm" class="row">
@@ -60,7 +60,7 @@
                 <div class="col-md-10 textarea-container">
                     <textarea></textarea>
                 </div>
-                <div class="col-md-1 save-button">.save button</div>
+                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
 
             <div id="hour-1pm" class="row">
@@ -68,7 +68,7 @@
                 <div class="col-md-10 textarea-container">
                     <textarea></textarea>
                 </div>
-                <div class="col-md-1 save-button">.save button</div>
+                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
 
             <div id="hour-2pm" class="row">
@@ -76,7 +76,7 @@
                 <div class="col-md-10 textarea-container">
                     <textarea></textarea>
                 </div>
-                <div class="col-md-1 save-button">.save button</div>
+                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
 
             <div id="hour-3pm" class="row">
@@ -84,7 +84,7 @@
                 <div class="col-md-10 textarea-container">
                     <textarea></textarea>
                 </div>
-                <div class="col-md-1 save-button">.save button</div>
+                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
 
             <div id="hour-4pm" class="row">
@@ -92,7 +92,7 @@
                 <div class="col-md-10 textarea-container">
                     <textarea></textarea>
                 </div>
-                <div class="col-md-1 save-button">.save button</div>
+                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
 
             <div id="hour-5pm" class="row">
@@ -100,7 +100,7 @@
                 <div class="col-md-10 textarea-container">
                     <textarea></textarea>
                 </div>
-                <div class="col-md-1 save-button">.save button</div>
+                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
         </div>
         
