refactor on main structure, ids on html

--- a/index.html
+++ b/index.html
@@ -31,76 +31,76 @@
         </header>
 
         <div class="container">
-            <div id="hour-9am" class="row">
+            <div id="row-9am" class="row">
                 <div class="col-md-1 hour">9am</div>
                 <div class="col-md-10 textarea-container">
-                    <textarea></textarea>
+                    <textarea id="textarea-9am"></textarea>
                 </div>
-                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
+                <div id="save-button-9am" class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
 
-            <div id="hour-10am" class="row">
+            <div id="row-10am" class="row">
                 <div class="col-md-1 hour">10am</div>
                 <div class="col-md-10 textarea-container">
-                    <textarea></textarea>
+                    <textarea id="textarea-10am"></textarea>
                 </div>
-                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
+                <div id="save-button-10am" class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
 
-            <div id="hour-11am" class="row">
+            <div id="row-11am" class="row">
                 <div class="col-md-1 hour">11am</div>
                 <div class="col-md-10 textarea-container">
-                    <textarea></textarea>
+                    <textarea id="textarea-11am"></textarea>
                 </div>
-                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
+                <div id="save-button-11am" class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
 
-            <div id="hour-12pm" class="row">
+            <div id="row-12pm" class="row">
                 <div class="col-md-1 hour">12pm</div>
                 <div class="col-md-10 textarea-container">
-                    <textarea></textarea>
+                    <textarea id="textarea-12pm"></textarea>
                 </div>
-                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
+                <div id="save-button-12pm" class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
 
-            <div id="hour-1pm" class="row">
+            <div id="row-1pm" class="row">
                 <div class="col-md-1 hour">1pm</div>
                 <div class="col-md-10 textarea-container">
-                    <textarea></textarea>
+                    <textarea id="textarea-1pm"></textarea>
                 </div>
-                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
+                <div id="save-button-1pm" class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
 
-            <div id="hour-2pm" class="row">
+            <div id="row-2pm" class="row">
                 <div class="col-md-1 hour">2pm</div>
                 <div class="col-md-10 textarea-container">
-                    <textarea></textarea>
+                    <textarea id="textarea-2pm"></textarea>
                 </div>
-                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
+                <div id="save-button-2pm" class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
 
-            <div id="hour-3pm" class="row">
+            <div id="row-3pm" class="row">
                 <div class="col-md-1 hour">3pm</div>
                 <div class="col-md-10 textarea-container">
-                    <textarea></textarea>
+                    <textarea id="textarea-3pm"></textarea>
                 </div>
-                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
+                <div id="save-button-3pm" class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
 
-            <div id="hour-4pm" class="row">
+            <div id="row-4pm" class="row">
                 <div class="col-md-1 hour">4pm</div>
                 <div class="col-md-10 textarea-container">
-                    <textarea></textarea>
+                    <textarea id="textarea-4pm"></textarea>
                 </div>
-                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
+                <div id="save-button-4pm" class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
 
-            <div id="hour-5pm" class="row">
+            <div id="row-5pm" class="row">
                 <div class="col-md-1 hour">5pm</div>
                 <div class="col-md-10 textarea-container">
-                    <textarea></textarea>
+                    <textarea id="textarea-5pmm"></textarea>
                 </div>
-                <div class="col-md-1 save-button"><i class="fa fa-save"></i></div>
+                <div id="save-button-5pm" class="col-md-1 save-button"><i class="fa fa-save"></i></div>
             </div>
         </div>
         
