added functionality to append to container using jquery

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <p id="currentDay" class="lead"></p>
         </header>
 
-        <div class="container">
-            <div id="row-9am" class="row">
+        <div id="schedule-container" class="container">
+            <!-- <div id="row-9am" class="row">
                 <div class="col-md-1 hour">9am</div>
                 <div class="col-md-10 textarea-container">
                     <textarea id="textarea-9am"></textarea>
@@ -101,7 +101,7 @@
                     <textarea id="textarea-5pmm"></textarea>
                 </div>
                 <div id="save-button-5pm" class="col-md-1 save-button"><i class="fa fa-save"></i></div>
-            </div>
+            </div> -->
         </div>
         
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
